--- a/02. Starbucks 사이트 프로젝트/css/Pmain.css
+++ b/02. Starbucks 사이트 프로젝트/css/Pmain.css
@@ -77,3 +77,43 @@
   flex-grow: 2;
   order: -1;
 } */
+
+/* div {
+  width: 100px;
+  height: 100px;
+  background-color: orange;
+  transition: 1s .5s; /* 지속시간 대기시간 */
+  /* transition: 
+    width .5s, 
+    background-color 2s; /*전환효과
+} */
+/* div:active {
+  width: 300px;
+  background-color: royalblue;
+} */
+
+body {
+  padding: 100px;
+}
+.container {
+  width: 100px;
+  height: 100px;
+  background-color: royalblue;
+  
+}
+.container .item {
+  width: 100px;
+  height: 100px;
+  background-color: orange;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 1s;
+}
+.container .item:hover {
+ /* transform: perspective(150px) rotateX(45deg) translate(100px) scale(1.3) skewX(45deg); */
+ transform: rotateY(180deg);
+ /* backface-visibility:hidden; */
+ background-color: red;
+ 
+}
